decafParser.py
# Generated from decaf.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class decafParser ( Parser ):

    grammarFileName = "decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'{'", "'}'", 
                     "';'", "'['", "']'", "'struct'", "'int'", "'char'", 
                     "'boolean'", "'void'", "'('", "','", "')'", "'if'", 
                     "'else'", "'while'", "'return'", "'='", "'.'", "'-'", 
                     "'!'", "'+'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'&&'", "'||'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUM", "ID", "CHAR", "SPACES", 
                      "LineComment" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDeclaration = 2
    RULE_structDeclaration = 3
    RULE_structChildren = 4
    RULE_structInstance = 5
    RULE_varType = 6
    RULE_methodDeclaration = 7
    RULE_methodType = 8
    RULE_parameter = 9
    RULE_parameterType = 10
    RULE_block = 11
    RULE_statement = 12
    RULE_location = 13
    RULE_expression = 14
    RULE_methodCall = 15
    RULE_arg = 16
    RULE_arith_op = 17
    RULE_p_arith_op = 18
    RULE_rel_op = 19
    RULE_eq_op = 20
    RULE_cond_op = 21
    RULE_literal = 22
    RULE_int_literal = 23
    RULE_char_literal = 24
    RULE_bool_literal = 25

    ruleNames =  [ "program", "declaration", "varDeclaration", "structDeclaration", 
                   "structChildren", "structInstance", "varType", "methodDeclaration", 
                   "methodType", "parameter", "parameterType", "block", 
                   "statement", "location", "expression", "methodCall", 
                   "arg", "arith_op", "p_arith_op", "rel_op", "eq_op", "cond_op", 
                   "literal", "int_literal", "char_literal", "bool_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    NUM=38
    ID=39
    CHAR=40
    SPACES=41
    LineComment=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(decafParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = decafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(decafParser.T__0)
            self.state = 53
            self.match(decafParser.T__1)
            self.state = 54
            self.match(decafParser.T__2)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 55
                self.declaration()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(decafParser.T__3)
            self.state = 62
            self.match(decafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDeclaration(self):
            return self.getTypedRuleContext(decafParser.StructDeclarationContext,0)


        def structInstance(self):
            return self.getTypedRuleContext(decafParser.StructInstanceContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(decafParser.VarDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(decafParser.MethodDeclarationContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = decafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.structDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.structInstance()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.varDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.methodDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(decafParser.VarTypeContext,0)


        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def NUM(self):
            return self.getToken(decafParser.NUM, 0)

        def getRuleIndex(self):
            return decafParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = decafParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.varType()
                self.state = 71
                self.match(decafParser.ID)
                self.state = 72
                self.match(decafParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.varType()
                self.state = 75
                self.match(decafParser.ID)
                self.state = 76
                self.match(decafParser.T__5)
                self.state = 77
                self.match(decafParser.NUM)
                self.state = 78
                self.match(decafParser.T__6)
                self.state = 79
                self.match(decafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def structChildren(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.StructChildrenContext)
            else:
                return self.getTypedRuleContext(decafParser.StructChildrenContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclaration" ):
                return visitor.visitStructDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def structDeclaration(self):

        localctx = decafParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(decafParser.T__7)
            self.state = 84
            self.match(decafParser.ID)
            self.state = 85
            self.match(decafParser.T__2)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 86
                self.structChildren()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(decafParser.T__3)
            self.state = 93
            self.match(decafParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructChildrenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(decafParser.VarDeclarationContext,0)


        def structInstance(self):
            return self.getTypedRuleContext(decafParser.StructInstanceContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_structChildren

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructChildren" ):
                listener.enterStructChildren(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructChildren" ):
                listener.exitStructChildren(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructChildren" ):
                return visitor.visitStructChildren(self)
            else:
                return visitor.visitChildren(self)




    def structChildren(self):

        localctx = decafParser.StructChildrenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structChildren)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [decafParser.T__8, decafParser.T__9, decafParser.T__10, decafParser.T__11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.varDeclaration()
                pass
            elif token in [decafParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.structInstance()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructInstanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(decafParser.ID)
            else:
                return self.getToken(decafParser.ID, i)

        def NUM(self):
            return self.getToken(decafParser.NUM, 0)

        def getRuleIndex(self):
            return decafParser.RULE_structInstance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructInstance" ):
                listener.enterStructInstance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructInstance" ):
                listener.exitStructInstance(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructInstance" ):
                return visitor.visitStructInstance(self)
            else:
                return visitor.visitChildren(self)




    def structInstance(self):

        localctx = decafParser.StructInstanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structInstance)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(decafParser.T__7)
                self.state = 100
                self.match(decafParser.ID)
                self.state = 101
                self.match(decafParser.ID)
                self.state = 102
                self.match(decafParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(decafParser.T__7)
                self.state = 104
                self.match(decafParser.ID)
                self.state = 105
                self.match(decafParser.ID)
                self.state = 106
                self.match(decafParser.T__5)
                self.state = 107
                self.match(decafParser.NUM)
                self.state = 108
                self.match(decafParser.T__6)
                self.state = 109
                self.match(decafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = decafParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodType(self):
            return self.getTypedRuleContext(decafParser.MethodTypeContext,0)


        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(decafParser.BlockContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(decafParser.ParameterContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = decafParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.methodType()
            self.state = 115
            self.match(decafParser.ID)
            self.state = 116
            self.match(decafParser.T__12)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 117
                self.parameter()

            elif la_ == 2:
                self.state = 118
                self.parameter()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==decafParser.T__13:
                    self.state = 119
                    self.match(decafParser.T__13)
                    self.state = 120
                    self.parameter()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 128
            self.match(decafParser.T__14)
            self.state = 129
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_methodType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType" ):
                listener.enterMethodType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType" ):
                listener.exitMethodType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodType" ):
                return visitor.visitMethodType(self)
            else:
                return visitor.visitChildren(self)




    def methodType(self):

        localctx = decafParser.MethodTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterType(self):
            return self.getTypedRuleContext(decafParser.ParameterTypeContext,0)


        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def getRuleIndex(self):
            return decafParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = decafParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.parameterType()
                self.state = 134
                self.match(decafParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.parameterType()
                self.state = 137
                self.match(decafParser.ID)
                self.state = 138
                self.match(decafParser.T__5)
                self.state = 139
                self.match(decafParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(decafParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_parameterType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType" ):
                listener.enterParameterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType" ):
                listener.exitParameterType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterType" ):
                return visitor.visitParameterType(self)
            else:
                return visitor.visitChildren(self)




    def parameterType(self):

        localctx = decafParser.ParameterTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameterType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.VarDeclarationContext,i)


        def structDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.StructDeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.StructDeclarationContext,i)


        def structInstance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.StructInstanceContext)
            else:
                return self.getTypedRuleContext(decafParser.StructInstanceContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.StatementContext)
            else:
                return self.getTypedRuleContext(decafParser.StatementContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = decafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(decafParser.T__2)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 150
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 147
                    self.varDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 148
                    self.structDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 149
                    self.structInstance()
                    pass


                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__2) | (1 << decafParser.T__4) | (1 << decafParser.T__12) | (1 << decafParser.T__15) | (1 << decafParser.T__17) | (1 << decafParser.T__18) | (1 << decafParser.T__21) | (1 << decafParser.T__22) | (1 << decafParser.T__35) | (1 << decafParser.T__36) | (1 << decafParser.NUM) | (1 << decafParser.ID) | (1 << decafParser.CHAR))) != 0):
                self.state = 155
                self.statement()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(decafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Stm_methodcallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def methodCall(self):
            return self.getTypedRuleContext(decafParser.MethodCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStm_methodcall" ):
                listener.enterStm_methodcall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStm_methodcall" ):
                listener.exitStm_methodcall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStm_methodcall" ):
                return visitor.visitStm_methodcall(self)
            else:
                return visitor.visitChildren(self)


    class WhileScopeContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(decafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileScope" ):
                listener.enterWhileScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileScope" ):
                listener.exitWhileScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileScope" ):
                return visitor.visitWhileScope(self)
            else:
                return visitor.visitChildren(self)


    class Stm_expressionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStm_expression" ):
                listener.enterStm_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStm_expression" ):
                listener.exitStm_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStm_expression" ):
                return visitor.visitStm_expression(self)
            else:
                return visitor.visitChildren(self)


    class IfScopeContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.block1 = None # BlockContext
            self.block2 = None # BlockContext
            self.copyFrom(ctx)
